k8s/prod/network-policy.yaml
apiVersion: policy/v1
kind: NetworkPolicy
metadata:
  name: ng-core
  namespace: ng-core
  labels:
    app: ng-core
spec:
  podSelector:
    matchLabels:
      app: ng-core
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: ingress-nginx
      ports:
        - protocol: TCP
          port: 80
  egress:
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
    - to:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 443
